# fpp-analysis-tools

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
analysistools/: __init__.py  binning_container.py  conditional_averaging.py  correlation_function.py  deconvolution_methods.py  distributions.py  estimate_hurst.py  excess_statistics.py  parameter_estimation_ECF.py  random_phase.py
fppanalysis/: __init__.py  conditional_averaging.py  conditional_averaging_2d.py  correlation_function.py  deconvolution_methods.py  distributions.py  kf_spectra.py  moving_average.py  peak_detection.py  random_phase.py  running_moments.py  time_delay_estimation.py  two_dim_velocity_estimates.py  utils.py
guides/: how_to_use_2D_velocity_estimate.ipynb
tests/: test_utils.py  time_delay_estimation_test.py  two_dim_velocity_estimates_test.py
