[tool.poetry]
name = "fppanalysis"
version = "0.1.5"
description = "Analysis tools for time series"
homepage = "https://github.com/uit-cosmo/fpp-analysis-tools"
authors = ["gregordecristoforo <gregor.decristoforo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18"
scipy = "^1.8.0"
tqdm = "^4.62.3"
PyWavelets = "^1.2.0"
matplotlib = "^3.6.3"
mpmath = "^1.2.1"
blobmodel = "^0.1.1"
xarray = "^0.21.1"
pathos = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
